--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ void main() {
   fNormal = normal;
   ftexcoord = texcoord;
   
-  gl_Position = proj * view * model * pos;
+  gl_Position = proj * view * model * position;
 }
 </script>
 <script id="barn-fs" type="notjs">
